# webrtc-java

./: android_ci_build.bash
.github/actions/prepare-linux/: action.yml
.github/workflows/: Android-jni.yml  build.yml
webrtc-jni/src/main/cpp/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/jni-voithos/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/webrtc/: CMakeLists.txt
